Moving export files into subfolder 'Export'

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -187,7 +187,7 @@
     <Compile Include="DataExchange\Deployment\IFilePublisher.cs" />
     <Compile Include="DataExchange\Excel\ExcelDataReader.cs" />
     <Compile Include="DataExchange\Events\RowExportingEvent.cs" />
-    <Compile Include="DataExchange\ExportConfigurationInfo.cs" />
+    <Compile Include="DataExchange\Export\ExportConfigurationInfo.cs" />
     <Compile Include="DataExchange\Import\DataImporter.cs" />
     <Compile Include="DataExchange\Import\EntityImporterBase.cs" />
     <Compile Include="DataExchange\Import\IEntityImporter.cs" />
@@ -202,31 +202,31 @@
     <Compile Include="DataExchange\Import\IImportProfileService.cs" />
     <Compile Include="DataExchange\Import\ImportMessage.cs" />
     <Compile Include="DataExchange\Import\ImportResult.cs" />
-    <Compile Include="DataExchange\ExportProviderBase.cs" />
-    <Compile Include="DataExchange\DataExporter.cs" />
+    <Compile Include="DataExchange\Export\ExportProviderBase.cs" />
+    <Compile Include="DataExchange\Export\DataExporter.cs" />
     <Compile Include="DataExchange\Internal\DataExporterContext.cs" />
-    <Compile Include="DataExchange\DynamicEntityHelper.cs" />
+    <Compile Include="DataExchange\Export\DynamicEntityHelper.cs" />
     <Compile Include="DataExchange\Internal\CategoryExportContext.cs" />
     <Compile Include="DataExchange\Internal\CustomerExportContext.cs" />
     <Compile Include="DataExchange\Internal\ManufacturerExportContext.cs" />
-    <Compile Include="DataExchange\DataExportResult.cs" />
-    <Compile Include="DataExchange\ExportXmlHelper.cs" />
-    <Compile Include="DataExchange\IDataExporter.cs" />
+    <Compile Include="DataExchange\Export\DataExportResult.cs" />
+    <Compile Include="DataExchange\Export\ExportXmlHelper.cs" />
+    <Compile Include="DataExchange\Export\IDataExporter.cs" />
     <Compile Include="DataExchange\Internal\DynamicEntity.cs" />
     <Compile Include="DataExchange\ISyncMappingService.cs" />
     <Compile Include="DataExchange\SyncMappingService.cs" />
     <Compile Include="DataExchange\Internal\OrderExportContext.cs" />
     <Compile Include="DataExchange\Internal\ProductExportContext.cs" />
-    <Compile Include="DataExchange\ExportExecuteContext.cs" />
-    <Compile Include="DataExchange\ExportExtensions.cs" />
-    <Compile Include="DataExchange\ExportFeaturesAttribute.cs" />
-    <Compile Include="DataExchange\ExportDataSegmenter.cs" />
-    <Compile Include="DataExchange\DataExportTask.cs" />
+    <Compile Include="DataExchange\Export\ExportExecuteContext.cs" />
+    <Compile Include="DataExchange\Export\ExportExtensions.cs" />
+    <Compile Include="DataExchange\Export\ExportFeaturesAttribute.cs" />
+    <Compile Include="DataExchange\Export\ExportDataSegmenter.cs" />
+    <Compile Include="DataExchange\Export\DataExportTask.cs" />
     <Compile Include="Directory\QuantityUnitService.cs" />
     <Compile Include="Directory\IQuantityUnitService.cs" />
-    <Compile Include="DataExchange\ExportProfileService.cs" />
-    <Compile Include="DataExchange\IExportProvider.cs" />
-    <Compile Include="DataExchange\IExportProfileService.cs" />
+    <Compile Include="DataExchange\Export\ExportProfileService.cs" />
+    <Compile Include="DataExchange\Export\IExportProvider.cs" />
+    <Compile Include="DataExchange\Export\IExportProfileService.cs" />
     <Compile Include="DataExchange\Import\ImportDataSegmenter.cs" />
     <Compile Include="DataExchange\Import\ImportRow.cs" />
     <Compile Include="Hooks\SlugSupportedPostDeleteHook.cs" />
