--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -380,6 +380,10 @@
     <Compile Include="Migrations\201601262000441_ImportFramework1.Designer.cs">
       <DependentUpon>201601262000441_ImportFramework1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603121451066_ThirdPartyEmailHandOver.cs" />
+    <Compile Include="Migrations\201603121451066_ThirdPartyEmailHandOver.Designer.cs">
+      <DependentUpon>201603121451066_ThirdPartyEmailHandOver.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -709,6 +713,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201601262000441_ImportFramework1.resx">
       <DependentUpon>201601262000441_ImportFramework1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603121451066_ThirdPartyEmailHandOver.resx">
+      <DependentUpon>201603121451066_ThirdPartyEmailHandOver.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
