--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -81,7 +81,7 @@
     <add key="sm:ClearPluginsShadowDirectoryOnStartup" value="false" />
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
     <add key="sm:BizImportMediaDirectory" value="~/Media/Uploaded/static" />
-    <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.DevTools" />
+    <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse" />
     <!-- Task Scheduler sweep interval in minutes (1 recommended) -->
     <add key="sm:TaskSchedulerSweepInterval" value="1" />
     <add key="g:RecaptchaWidgetUrl" value="https://www.google.com/recaptcha/api.js" />
