--- a/src/Presentation/SmartStore.Web/Web.Release.config
+++ b/src/Presentation/SmartStore.Web/Web.Release.config
@@ -5,7 +5,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <less>
-      <jsEngine name="MsieJsEngine" xdt:Transform="SetAttributes(name)" />
+      <jsEngine name="V8JsEngine" xdt:Transform="SetAttributes(name)" />
     </less>
   </bundleTransformer>
   <appSettings>
