--- a/src/Plugins/SmartStore.PayPal/SmartStore.PayPal.csproj
+++ b/src/Plugins/SmartStore.PayPal/SmartStore.PayPal.csproj
@@ -288,6 +288,9 @@
     <Content Include="Views\PayPalPlus\PaymentWall.Mobile.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Views\PayPalPlus\PaymentWallScripting.cshtml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Web References\PayPalSvc\CoreComponentTypes.xsd">
       <SubType>Designer</SubType>
     </None>
