PayPal Plus: Integrating third party payment methods

--- a/src/Plugins/SmartStore.PayPal/SmartStore.PayPal.csproj
+++ b/src/Plugins/SmartStore.PayPal/SmartStore.PayPal.csproj
@@ -149,6 +149,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="RouteProvider.cs" />
+    <Compile Include="Validators\PayPalPlusConfigValidator.cs" />
     <Compile Include="Validators\PayPalDirectPaymentInfoValidator.cs" />
     <Compile Include="Validators\PayPalExpressPaymentInfoValidator.cs" />
     <Compile Include="Web References\PayPalSvc\Reference.cs">
