Added AutoPrefixer post processor

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -255,6 +255,7 @@
     <Compile Include="Plugins\ProviderManager.cs" />
     <Compile Include="Seo\CanonicalHostNameAttribute.cs" />
     <Compile Include="SmartUrlRoutingModule.cs" />
+    <Compile Include="Theming\CssHttpHandlerBase.cs" />
     <Compile Include="Theming\LocalizedDisplayMode.cs" />
     <Compile Include="Theming\ThemeFileResolver.cs" />
     <Compile Include="Theming\InheritedVirtualThemeFile.cs" />
