--- a/src/Presentation/SmartStore.Web/packages.config
+++ b/src/Presentation/SmartStore.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Autofac" version="3.5.2" targetFramework="net451" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net451" />
+  <package id="BundleTransformer.Autoprefixer" version="1.9.99" targetFramework="net451" />
   <package id="BundleTransformer.Core" version="1.9.92" targetFramework="net451" />
   <package id="BundleTransformer.Less" version="1.9.103" targetFramework="net451" />
   <package id="BundleTransformer.MicrosoftAjax" version="1.9.92" targetFramework="net451" />
