--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -12,18 +12,20 @@
 			<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
 		  <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
       <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
+      <section name="autoprefixer" type="BundleTransformer.Autoprefixer.Configuration.AutoprefixerSettings, BundleTransformer.Autoprefixer" />
     </sectionGroup>
   </configSections>
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
-      <css defaultPostProcessors="UrlRewritingCssPostProcessor" defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" combineFilesBeforeMinification="false">
+      <css defaultPostProcessors="UrlRewritingCssPostProcessor, AutoprefixCssPostProcessor" defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" combineFilesBeforeMinification="false">
         <translators>
 				  <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				  <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
+				  <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" enabled="true" />
         </translators>
         <postProcessors>
 				  <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-			  </postProcessors>
+			    <add name="AutoprefixCssPostProcessor" type="BundleTransformer.Autoprefixer.PostProcessors.AutoprefixCssPostProcessor, BundleTransformer.Autoprefixer" useInDebugMode="true" />
+        </postProcessors>
         <minifiers>
 					<add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
 				  <add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" />
@@ -51,9 +53,19 @@
       <css allowEmbeddedAspNetBlocks="false" blocksStartOnSameLine="NewLine" ignoreAllErrors="false" ignoreErrorList="" indentSize="4" lineBreakThreshold="2147482647" outputMode="SingleLine" preprocessorDefineList="" termSemicolons="false" colorNames="Strict" commentMode="Important" minifyExpressions="true" severity="0" />
       <js allowEmbeddedAspNetBlocks="false" blocksStartOnSameLine="NewLine" ignoreAllErrors="false" ignoreErrorList="" indentSize="4" lineBreakThreshold="2147482647" outputMode="SingleLine" preprocessorDefineList="" termSemicolons="false" alwaysEscapeNonAscii="false" collapseToLiteral="true" constStatementsMozilla="false" debugLookupList="Debug,$Debug,WAssert,Msn.Debug,Web.Debug" errorIfNotInlineSafe="false" evalLiteralExpressions="true" evalTreatment="Ignore" ignoreConditionalCompilation="false" ignorePreprocessorDefines="false" inlineSafeStrings="true" knownGlobalNamesList="" localRenaming="CrunchAll" macSafariQuirks="true" manualRenamesProperties="true" noAutoRenameList="$super" preserveFunctionNames="false" preserveImportantComments="true" quoteObjectLiteralProperties="false" removeFunctionExpressionNames="true" removeUnneededCode="true" renamePairs="" reorderScopeDeclarations="true" strictMode="false" stripDebugStatements="true" severity="0" />
     </microsoftAjax>
+    <autoprefixer cascade="false" add="true" remove="true" supports="true" flexbox="true" grid="true">
+      <browsers>
+        <add conditionalExpression="> 1%" />
+        <add conditionalExpression="last 2 versions" />
+        <add conditionalExpression="Firefox ESR" />
+        <add conditionalExpression="not ie &lt;= 9" />
+      </browsers>
+      <!-- ATTENTION: If you experience problems with the "V8JsEngine", use "MsieJsEngine" instead -->
+      <jsEngine name="V8JsEngine" />
+    </autoprefixer>
     <less useNativeMinification="false" ieCompat="false" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
       <!-- ATTENTION: If you experience problems with the "V8JsEngine", use "MsieJsEngine" instead -->
-      <jsEngine name="MsieJsEngine" />
+      <jsEngine name="V8JsEngine" />
     </less>
   </bundleTransformer>
   <jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd">
