Added Sass && SCSS translator

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -11,6 +11,7 @@
     <sectionGroup name="bundleTransformer"> 
 			<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
 		  <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
+      <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
       <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
       <section name="autoprefixer" type="BundleTransformer.Autoprefixer.Configuration.AutoprefixerSettings, BundleTransformer.Autoprefixer" />
     </sectionGroup>
@@ -21,6 +22,7 @@
         <translators>
 				  <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
 				  <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" enabled="true" />
+          <add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" />
         </translators>
         <postProcessors>
 				  <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
@@ -33,6 +35,8 @@
         <fileExtensions>
 					<add fileExtension=".css" assetTypeCode="Css" />
 				  <add fileExtension=".less" assetTypeCode="Less" />
+          <add fileExtension=".sass" assetTypeCode="Sass" />
+          <add fileExtension=".scss" assetTypeCode="Scss" />
         </fileExtensions>
       </css>
       <js defaultMinifier="MicrosoftAjaxJsMinifier" usePreMinifiedFiles="true">
@@ -55,7 +59,7 @@
     </microsoftAjax>
     <autoprefixer cascade="false" add="true" remove="true" supports="true" flexbox="true" grid="true">
       <browsers>
-        <add conditionalExpression="> 1%" />
+        <add conditionalExpression="&gt; 1%" />
         <add conditionalExpression="last 2 versions" />
         <add conditionalExpression="Firefox ESR" />
         <add conditionalExpression="not ie &lt;= 9" />
@@ -178,9 +182,13 @@
       <!-- robots.txt -->
       <remove name="robots" />
       <add name="robots" path="robots.txt" verb="*" type="System.Web.Routing.UrlRoutingModule" resourceType="Unspecified" preCondition="integratedMode" />
-      <!-- *.less -->
+      <!-- *.less, .sass & .scss -->
       <remove name="LessAssetHandler" />
+      <remove name="SassAssetHandler" />
+      <remove name="ScssAssetHandler" />
       <add name="LessAssetHandler" path="*.less" verb="GET" type="SmartStore.Web.Framework.Theming.LessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />
+      <add name="SassAssetHandler" path="*.sass" verb="GET" type="SmartStore.Web.Framework.Theming.SassCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />
+      <add name="ScssAssetHandler" path="*.scss" verb="GET" type="SmartStore.Web.Framework.Theming.SassCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="integratedMode" />     
       <!-- WebApi -->
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
@@ -207,7 +215,9 @@
       <requestFiltering>
         <hiddenSegments>
           <remove segment="ClearScript.V8" />
+          <remove segment="LibSassHost.Native" />
           <add segment="ClearScript.V8" />
+          <add segment="LibSassHost.Native" />
         </hiddenSegments>
       </requestFiltering>
     </security>
