--- a/src/Presentation/SmartStore.Web/packages.config
+++ b/src/Presentation/SmartStore.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="BundleTransformer.Core" version="1.9.92" targetFramework="net451" />
   <package id="BundleTransformer.Less" version="1.9.103" targetFramework="net451" />
   <package id="BundleTransformer.MicrosoftAjax" version="1.9.92" targetFramework="net451" />
+  <package id="BundleTransformer.SassAndScss" version="1.9.96" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net451" />
   <package id="FluentValidation" version="5.6.2.0" targetFramework="net451" />
@@ -18,6 +19,7 @@
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Migrate" version="1.2.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="LibSassHost" version="0.4.5" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
